PN-9587 start cdc indexing